# rules_tf

./: README.md
.github/workflows/: ci.yml
tests/bcr/: MODULE.bazel
tests/bcr/tf/: BUILD.bazel
tests/bcr/tf/modules/multi_provider/: README-custom.md
tests/bcr/tf/provider_version_tests/: BUILD.bazel  test_expects_failure.sh  test_target_not_exists.sh
tests/bcr/tf/provider_version_tests/lint_disabled/: BUILD.bazel  README.md
tests/bcr/tf/provider_version_tests/no_versions_file/: BUILD.bazel  README.md  main.tf  terraform.tf
tests/bcr/tf/provider_version_tests/outdated/: BUILD.bazel  README.md  main.tf  outputs.tf  variables.tf  versions.tf.json
tests/bcr/tf/provider_version_tests/with_providers/: BUILD.bazel  README.md  main.tf  versions.tf.json
tests/bcr/tf/root-modules/root-mod-a/: versions.tf.json
tests/bcr/tf/root-modules/root-mod-multi-provider/: README-custom.md
tests/versions_check/: BUILD.bazel  run_expecting_failure.sh  test_passes.sh  versions_check_test.bzl
tests/versions_check/test_modules/lint_disabled/: BUILD.bazel
tests/versions_check/test_modules/no_versions_file/: BUILD.bazel
tests/versions_check/test_modules/outdated/: BUILD.bazel
tests/versions_check/test_modules/with_providers/: BUILD.bazel
tf/: def.bzl  toolchains.bzl
tf/rules/: tf-module.bzl
