load("@rules_tf//tf:def.bzl", "tf_module", "tf_providers_versions")

tf_providers_versions(
    name = "test_versions",
    tf_version = ">= 1.0",
    providers = {
        "null": "hashicorp/null:3.0.0",
    },
)

tf_module(
    name = "no_versions_file",
    providers = ["null"],
    providers_versions = ":test_versions",
    # No disable_version_lint, but no versions.tf.json exists
    # So versions_check should NOT be created
)