load("@rules_tf//tf:def.bzl", "tf_module", "tf_providers_versions")

tf_providers_versions(
    name = "test_versions",
    tf_version = ">= 1.0",
    providers = {
        "null": "hashicorp/null:3.0.0",
        "random": "hashicorp/random:3.1.0",
    },
)

tf_module(
    name = "outdated",
    providers = ["null", "random"],  # BUILD says null + random
    providers_versions = ":test_versions",
)